// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RemoteSVG Component renders SVG 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  width: 24px;
  height: 24px;
  cursor: inherit;
}

<span
    class="emotion-0"
  >
    <img
      alt="test image"
      class="emotion-1"
      height="24"
      src="https://test-url.com/test.svg"
      width="24"
    />
  </span>
</DocumentFragment>
`;

exports[`RemoteSVG Component renders SVG with correct alt and title attributes 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  width: 24px;
  height: 24px;
  cursor: inherit;
}

<span
    class="emotion-0"
  >
    <img
      alt="test image alt"
      class="emotion-1"
      height="24"
      src="https://test-url.com/test.svg"
      title="test image title"
      width="24"
    />
  </span>
</DocumentFragment>
`;

exports[`RemoteSVG Component renders SVG with hover correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  width: 24px;
  height: 24px;
  cursor: pointer;
}

.emotion-1:hover {
  -webkit-filter: brightness(0.8);
  filter: brightness(0.8);
}

<span
    class="emotion-0"
  >
    <img
      class="emotion-1"
      height="24"
      src="https://test-url.com/test.svg"
      width="24"
    />
  </span>
</DocumentFragment>
`;

exports[`RemoteSVG Component renders active SVG correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<span
    class="emotion-0"
  >
    <span
      style="width: 24px; height: 24px; display: inline-block;"
    />
  </span>
</DocumentFragment>
`;

exports[`RemoteSVG Component renders disabled SVG correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  width: 24px;
  height: 24px;
  cursor: inherit;
  opacity: 0.5;
}

<span
    class="emotion-0"
  >
    <img
      class="emotion-1"
      height="24"
      src="https://test-url.com/test.svg"
      width="24"
    />
  </span>
</DocumentFragment>
`;

exports[`RemoteSVG Component should not renders SVG with active, disabled effect if isActive or isDisabled props are false 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<span
    class="emotion-0"
  >
    <span
      style="width: 24px; height: 24px; display: inline-block;"
    />
  </span>
</DocumentFragment>
`;
